--- a/dia1-html-css-estruturas/index.html
+++ b/dia1-html-css-estruturas/index.html
@@ -8,13 +8,26 @@
 
 <body>
     <h1>Luiz Gustavo Vieira Ferreira</h1>
-    <img src="./IMG_5175.JPG" alt="foto Gustavo Ferreira" width=200px>
-    <p><strong>"Foto trabalhando. <br> Corpo de Bombeiros."</strong></p>
+    <img src="./6b458ce5-a269-4779-9bdf-d1f86edcdf23.jpg" alt="foto Luiz Gustavo Ferreira" width=200px>
+    <p><strong>"Fim de semana com a esposa.</strong></p>
     <br><br>
     <p><em>Um pouco sobre mim:</em></p>
-    <p>Sou Brasileiro, moro no Litoral de Sao Paulo,<br> na cidade de Caraguatatuba que fica a 50km de Ubatuba.</p>
-    <p>Sou casado, tenho 46 anos e um irmao chamado Joao.</p>
-    
+    <p>Sou Brasileiro, moro no Litoral de Sao Paulo,<br> na cidade de Caraguatatuba.</p>
+    <p>Sou casado, tenho 46 anos, gosto de pedalar,<br> estudar e passar tempo com a familia .</p>
+    <p>Algumas qualidades:</p>
+    <ul>
+        <li>Ingles fluente.</li>
+        <li>Trabalho bem em equipe.</li>
+        <li>Gosto de aprender coisas novas</li>
+        <li>Sei cozinhar.</li>
+        
+    </ul>
+    <a href="https://www.cyclingnews.com/blogs/" target="_blank">Blog de ciclismo.</a><br>
+
+    <a href="ul#">Lista de abilidades.</a><br>
+    <a href="img#">Foto de portfolio.</a><br>
+    <a href="h1#">Nome completo.</a>
+
 
 
 
