--- a/dia1-html-css-estruturas/index.html
+++ b/dia1-html-css-estruturas/index.html
@@ -9,12 +9,12 @@
 <body>
     <h1>Luiz Gustavo Vieira Ferreira</h1>
     <img src="./6b458ce5-a269-4779-9bdf-d1f86edcdf23.jpg" alt="foto Luiz Gustavo Ferreira" width=200px>
-    <p><strong>"Fim de semana com a esposa.</strong></p>
+    <h3><strong>"Fim de semana com a esposa.</strong></h3>
     <br><br>
-    <p><em>Um pouco sobre mim:</em></p>
+    <h3><em>Um pouco sobre mim:</em></h3>
     <p>Sou Brasileiro, moro no Litoral de Sao Paulo,<br> na cidade de Caraguatatuba.</p>
     <p>Sou casado, tenho 46 anos, gosto de pedalar,<br> estudar e passar tempo com a familia .</p>
-    <p>Algumas qualidades:</p>
+    <h3><em>Algumas qualidades:</em></h3>
     <ul>
         <li>Ingles fluente.</li>
         <li>Trabalho bem em equipe.</li>
