mudancas na foto

--- a/dia1-2-3-html-css/index.html
+++ b/dia1-2-3-html-css/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body id="thisBody">
     <h1 id="nome">Luiz Gustavo Vieira Ferreira</h1>
-    <img
+    <img id="foto"
       src="./6b458ce5-a269-4779-9bdf-d1f86edcdf23.jpg"
       alt="foto Luiz Gustavo Ferreira"
       width="200px"
