mudancas na fonte e foto

--- a/dia1-2-3-html-css/index.html
+++ b/dia1-2-3-html-css/index.html
@@ -6,34 +6,34 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body id="thisBody">
+  <body class="thisBody">
     <h1 id="nome">Luiz Gustavo Vieira Ferreira</h1>
     <img id="foto"
       src="./6b458ce5-a269-4779-9bdf-d1f86edcdf23.jpg"
       alt="foto Luiz Gustavo Ferreira"
-      width="200px"
+      width="250px"
     />
-    <h3><strong>"Fim de semana com a esposa.</strong></h3>
-    <br /><br />
+    <h3 id="fraseFoto"><strong>"Fim de semana com a esposa."</strong></h3>
+    <br/>
     <h3><em>Um pouco sobre mim:</em></h3>
-    <p>
+    <p class="paragrafo">
       Sou Brasileiro, moro no Litoral de Sao Paulo,<br />
       na cidade de Caraguatatuba.
     </p>
-    <p>
+    <p class="paragrafo">
       Sou casado, tenho 46 anos, gosto de pedalar,<br />
       estudar e passar tempo com a familia .
-    </p>
+    </p><br>
     <h3><em>Algumas halidades:</em></h3>
-    <ul>
-      <li>Ingles fluente.</li>
-      <li>Trabalho bem em equipe.</li>
-      <li>Gosto de aprender</li>
-      <li>Sei cozinhar.</li>
-    </ul>
+    <ul id="lista">
+      <li id="trabalho">Trabalho bem em equipe.</li>
+      <li id="ingles">Falo Ingles fluente.</li>
+      <li id="aprender">Gosto de aprender</li>
+      <li id="cozinhar">Sei cozinhar.</li>
+    </ul><br>
     <a href="https://www.cyclingnews.com/blogs/" target="_blank"
       >Blog de ciclismo.</a
-    ><br />
+    ><br/>
 
     <a href="ul#">Lista de abilidades.</a><br />
     <a href="img#">Foto de portfolio.</a><br />
