revisao de pequenos detalhes.

--- a/dia1-2-3-html-css/index.html
+++ b/dia1-2-3-html-css/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <title>Gus' Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body class="thisBody">
     <h1 id="nome">Luiz Gustavo Vieira Ferreira</h1>
-    <img id="foto"
+    <img
+      id="foto"
       src="./6b458ce5-a269-4779-9bdf-d1f86edcdf23.jpg"
       alt="foto Luiz Gustavo Ferreira"
       width="250px"
     />
     <h3 id="fraseFoto"><strong>"Fim de semana com a esposa."</strong></h3>
-    <br/>
+    <br />
     <h3><em>Um pouco sobre mim:</em></h3>
     <p class="paragrafo">
       Sou Brasileiro, moro no Litoral de Sao Paulo,<br />
@@ -23,17 +24,19 @@
     <p class="paragrafo">
       Sou casado, tenho 46 anos, gosto de pedalar,<br />
       estudar e passar tempo com a familia .
-    </p><br>
+    </p>
+    <br />
     <h3><em>Algumas halidades:</em></h3>
     <ul id="lista">
       <li id="trabalho">Trabalho bem em equipe.</li>
       <li id="ingles">Falo Ingles fluente.</li>
       <li id="aprender">Gosto de aprender</li>
       <li id="cozinhar">Sei cozinhar.</li>
-    </ul><br>
+    </ul>
+    <br />
     <a href="https://www.cyclingnews.com/blogs/" target="_blank"
       >Blog de ciclismo.</a
-    ><br/>
+    ><br />
 
     <a href="ul#">Lista de abilidades.</a><br />
     <a href="img#">Foto de portfolio.</a><br />
