--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,28 +6,31 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body class="thisBody">
-    <h1 id="nome">Luiz Gustavo Vieira Ferreira</h1>
-    <img
-      id="foto"
-      src="./6b458ce5-a269-4779-9bdf-d1f86edcdf23.jpg"
-      alt="foto Luiz Gustavo Ferreira"
-      width="250px"
-    />
-    <h3 id="fraseFoto"><strong>"Fim de semana com a esposa."</strong></h3>
-    <br />
+  <body class="theBody">
+    <div>
+      <h1 id="nome">Luiz Gustavo Vieira Ferreira</h1>
+      <div>
+        <img
+          id="foto"
+          src="./6b458ce5-a269-4779-9bdf-d1f86edcdf23.jpg"
+          alt="foto Luiz Gustavo Ferreira"
+          width="250px"
+        />
+        <h3 id="fraseFoto"><strong>"Fim de semana com a esposa."</strong></h3>
+      </div>
+    </div>
     <h3><em>Um pouco sobre mim:</em></h3>
-    <p class="paragrafo">
+    <p class="sobreMim">
       Sou Brasileiro, moro no Litoral de Sao Paulo,<br />
       na cidade de Caraguatatuba.
     </p>
-    <p class="paragrafo">
+    <p class="sobreMim">
       Sou casado, tenho 46 anos, gosto de pedalar,<br />
       estudar e passar tempo com a familia .
     </p>
     <br />
     <h3><em>Algumas halidades:</em></h3>
-    <ul id="lista">
+    <ul id="ordenada">
       <li id="trabalho">Trabalho bem em equipe.</li>
       <li id="ingles">Falo Ingles fluente.</li>
       <li id="aprender">Gosto de aprender</li>
@@ -36,10 +39,10 @@
     <br />
     <a href="https://www.cyclingnews.com/blogs/" target="_blank"
       >Blog de ciclismo.</a
-    ><br />
+    ><br /><br>
 
-    <a href="ul#">Lista de abilidades.</a><br />
-    <a href="img#">Foto de portfolio.</a><br />
+    <a href="ul#">Lista de abilidades.</a><br/><br>
+    <a href="img#">Foto de portfolio.</a><br/><br>
     <a href="h1#">Nome completo.</a>
   </body>
 </html>
