--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@
         <h3 id="fraseFoto"><strong>"Fim de semana com a esposa."</strong></h3>
       </div>
     </div>
-    <h3><em>Um pouco sobre mim:</em></h3>
+    <h3 class="decoration"><em>Um pouco sobre mim:</em></h3>
     <p class="sobreMim">
       Sou Brasileiro, moro no Litoral de Sao Paulo,<br />
       na cidade de Caraguatatuba.
@@ -29,7 +29,7 @@
       estudar e passar tempo com a familia .
     </p>
     <br />
-    <h3><em>Algumas halidades:</em></h3>
+    <h3 class="decoration"><em>Algumas halidades:</em></h3>
     <ul id="ordenada">
       <li id="trabalho">Trabalho bem em equipe.</li>
       <li id="ingles">Falo Ingles fluente.</li>
