--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,42 +7,45 @@
   </head>
 
   <body class="theBody">
-    <div>
+    <main>
       <h1 id="nome">Luiz Gustavo Vieira Ferreira</h1>
-      <div>
+      <div class="image-container">
         <img
           id="foto"
           src="./6b458ce5-a269-4779-9bdf-d1f86edcdf23.jpg"
           alt="foto Luiz Gustavo Ferreira"
           width="250px"
         />
+
         <h3 id="fraseFoto"><strong>"Fim de semana com a esposa."</strong></h3>
       </div>
-    </div>
-    <h3 class="decoration"><em>Um pouco sobre mim:</em></h3>
-    <p class="sobreMim">
-      Sou Brasileiro, moro no Litoral de Sao Paulo,<br />
-      na cidade de Caraguatatuba.
-    </p>
-    <p class="sobreMim">
-      Sou casado, tenho 46 anos, gosto de pedalar,<br />
-      estudar e passar tempo com a familia .
-    </p>
-    <br />
-    <h3 class="decoration"><em>Algumas halidades:</em></h3>
-    <ul id="ordenada">
-      <li id="trabalho">Trabalho bem em equipe.</li>
-      <li id="ingles">Falo Ingles fluente.</li>
-      <li id="aprender">Gosto de aprender</li>
-      <li id="cozinhar">Sei cozinhar.</li>
-    </ul>
-    <br />
-    <a href="https://www.cyclingnews.com/blogs/" target="_blank"
-      >Blog de ciclismo.</a
-    ><br /><br>
+    </main>
+    <section>
+      <h3 class="decoration"><em>Um pouco sobre mim:</em></h3>
+      <p class="sobreMim">
+        Sou Brasileiro, moro no Litoral de Sao Paulo,<br />
+        na cidade de Caraguatatuba.
+      </p>
+      <p class="sobreMim">
+        Sou casado, tenho 46 anos, gosto de pedalar,<br />
+        estudar e passar tempo com a familia .
+      </p>
+      <br />
+      <h3 class="decoration"><em>Algumas halidades:</em></h3>
+      <ul id="habilidades">
+        <li id="trabalho">Trabalho bem em equipe.</li>
+        <li id="ingles">Falo Ingles fluente.</li>
+        <li id="aprender">Gosto de aprender</li>
+        <li id="cozinhar">Sei cozinhar.</li>
+      </ul>
+      <br />
+      <a href="https://www.cyclingnews.com/blogs/" target="_blank"
+        >Blog de ciclismo.</a
+      ><br /><br />
 
-    <a href="ul#">Lista de abilidades.</a><br/><br>
-    <a href="img#">Foto de portfolio.</a><br/><br>
-    <a href="h1#">Nome completo.</a>
+      <a href="ul#">Lista de abilidades.</a><br /><br />
+      <a href="img#">Foto de portfolio.</a><br /><br />
+      <a href="h1#">Nome completo.</a>
+    </section>
   </body>
 </html>
